ci-cd/k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-app-clone-service
  namespace: social-app
  labels:
    app: social-app-clone
spec:
  selector:
    app: social-app-clone
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
